--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,34 @@
+* {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+}
 .row-header {
         margin: 0px auto;
         padding: 0px auto;
 }
-
 .row-content {
         margin: 0px auto;
         padding: 50px 0px 50px 0px;
         border-bottom: 1px ridge;
         min-height: 400px;
 }
-
 .footer {
         background-color: #d1c4e9;
         margin: 0px auto;
         padding: 20px 0px 20px 0px;
 }
-
-.jumpotron {
+.jumbotron {
         padding: 70px 30px 70px 30px;
         margin: 0px auto;
-        background: 0px auto;
-        background: #9575cd;
+        background-color: #9575cd !important;
         color: floralwhite;
 }
-
 address {
         font-size: 80%;
         margin: 0px;
         color: #0f0f0f;
-        display: flex;
-        flex-direction: column;
 }
-
 .navbar-dark {
         background-color: #512da8;
 }
